# rs-dns-demo

./: Cargo.toml  README.md
examples/: demo.rs
src/: dns.rs
